@@ -1,3 +1,7 @@
+2004-08-18  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/EditPerson.py: fix None gramps_id for new person
+	* src/PeopleModel.py: add sort_name back in
+
 2004-08-18  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* configure.in: Check for pygtk instead of pygtk-dev.
 	* src/accent.py: Replace unknown chars with "?". 
